tests/pass/run/if_basic_parity/main.kira
@Main
function main() {
    let value = 2
    if value == 2 {
        print("if-then")
    } else {
        print("if-else")
    }
    return
}
