tests/fail/semantics/typed_float_initializer_requires_float/main.kira
@Main
function entry() {
    var value: Float = 0
    return
}

